--- a/frontend/src/main/web/src/app/app.component.html
+++ b/frontend/src/main/web/src/app/app.component.html
@@ -1,14 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Ecommerce</a>
+    <a class="navbar-brand" href="#"><img width="90px" height="27px" src="assets/icones/logotipo-maximatech.png" /></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
 
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -17,13 +14,14 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" routerLink="/pessoas">Cliente</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Produto</a>
+                    <a class="dropdown-item" routerLink="/produtos">Produto</a>
                 </div>
             </li>
-
         </ul>
-
     </div>
-    
-    <router-outlet></router-outlet>
 </nav>
+
+<div class="container">
+    <br>
+    <router-outlet></router-outlet>
+</div>
