--- a/frontend/src/main/web/src/app/app.component.html
+++ b/frontend/src/main/web/src/app/app.component.html
@@ -17,6 +17,18 @@
                     <a class="dropdown-item" routerLink="/produtos">Produto</a>
                 </div>
             </li>
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Pedido
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" routerLink="/novo-pedido">Novo pedido</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" routerLink="/consultar-pedido">Consultar pedido</a>
+                </div>
+            </li>
+
         </ul>
     </div>
 </nav>
